Fix more style issue.